feat: Add backend arch and events api

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,13 +3,17 @@ HOST=localhost
 PORT=4000
 
 ## DB Configs
+## for sequelize, typeorm, etc.
 DB_HOST=localhost
-DB_NAME=auth
+DB_NAME=sportsbook
 DB_USERNAME=root
 DB_PORT=5432
 DB_PASSWORD=test
 DB_DIALECT=postgres
-DB_LOGGING=1
+DB_LOG_LEVEL=info
+
+## for prisma
+DATABASE_URL="postgresql://root:test@localhost:5432/sportsbook?schema=public"
 
 ## CORS Policy (i.e. CORS_WHITE_LIST=localhost:8000, localhost:3000)
-CORS_WHITE_LIST=localhost:3000
+CORS_WHITE_LIST=*
