--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,16 +1,24 @@
 {
   "compilerOptions": {
-    "lib": ["es5", "es6"],
-    "esModuleInterop": true,
-    "target": "es5",
-    "module": "ESNext",
-    "moduleResolution": "node",
-    "outDir": "build",
-    "emitDecoratorMetadata": true,
+    /* Language and Environment */
+    "target": "es2016",
     "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    /* Modules */
+    "module": "commonjs",
+    "outDir": "./build",
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
+    "skipLibCheck": true,
+    "sourceMap": true,
+    "moduleResolution": "Node",
     "allowSyntheticDefaultImports": true,
+    "resolveJsonModule": true,
+    "baseUrl": "./",
+    "paths": {
+      "@/*": ["./src/*"],
+    }
   },
-  "ts-node": {
-    "experimentalSpecifierResolution": "node"
-  }
+  "include": ["src/**/*"]
 }
