--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -19,6 +19,7 @@
   "rules": {
     "no-console": "warn",
     "@typescript-eslint/no-var-requires": "off",
+    "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/explicit-module-boundary-types": "off",
     "@typescript-eslint/ban-types": [
       "error",
