--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.ts",
-  "type": "module",
   "scripts": {
     "api-dev": "nodemon",
     "docker-up": "docker-compose --file docker/docker-compose.yaml up -d",
@@ -12,33 +11,36 @@
   "author": "Ruben Aprikyan",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "5.19.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
-    "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.2",
-    "lodash": "^4.17.21",
-    "node-fetch": "^3.3.2",
-    "pg": "^8.4.0",
-    "randomstring": "^1.3.0",
-    "reflect-metadata": "^0.1.14",
-    "uuid": "^9.0.1"
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/node": "^16.11.10",
+    "@types/node": "^22.5.5",
     "@typescript-eslint/eslint-plugin": "^6.20.0",
     "@typescript-eslint/parser": "^6.20.0",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
-    "esm-module-alias": "^2.1.0",
-    "nodemon": "^3.0.3",
+    "module-alias": "^2.2.3",
+    "nodemon": "^3.1.0",
     "prettier": "^3.2.5",
+    "prisma": "5.19.1",
+    "supertest": "^7.0.0",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.6.2"
+  },
+  "_moduleAliases": {
+    "@": "src"
+  },
+
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
   }
 }
