--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,23 +10,39 @@
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@tanstack/react-query": "^5.56.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.445.0",
     "next": "14.2.13",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "webpack": "^5.94.0"
   },
   "devDependencies": {
+    "@tanstack/react-query-devtools": "^5.56.2",
     "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/react": "^18.3.8",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
     "postcss": "^8",
+    "prettier": "^3.3.3",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  },
+  "eslint": {
+    "extends": [
+      "next",
+      "next/core-web-vitals"
+    ],
+    "rules": {
+       "@typescript-eslint/no-explicit-any": "off"
+    }
   }
 }
