--- a/backend/package.json
+++ b/backend/package.json
@@ -12,15 +12,20 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "5.19.1",
+    "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "reflect-metadata": "^0.2.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.5.5",
     "@typescript-eslint/eslint-plugin": "^6.20.0",
     "@typescript-eslint/parser": "^6.20.0",
@@ -36,10 +41,10 @@
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.6.2"
   },
+  "postinstall": "npx prisma generate",
   "_moduleAliases": {
     "@": "src"
   },
-
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
   }
