docs: Add proper docs

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -17,3 +17,7 @@ DATABASE_URL="postgresql://root:test@localhost:5432/sportsbook?schema=public"
 
 ## CORS Policy (i.e. CORS_WHITE_LIST=localhost:8000, localhost:3000)
 CORS_WHITE_LIST=*
+
+## Auth Configs
+AUTH_TOKEN_SECRET=j&9a]{x!
+AUTH_TOKEN_LIFETIME=86400000 ## 1day
